# aws-gcp-token

./: .gitignore  .goreleaser.yaml  CHANGELOG.md  Cargo.toml  README.md  deny.toml  go.mod  go.sum  hk.pkl  main.go  main_test.go  mise.toml  renovate.json
.github/workflows/: ci.yml  release.yml
src/: main.rs
