[package]
name = "aws-gcp-token"
version = "0.1.0"
edition = "2024"
rust-version = "1.91"
description = "Fast AWS -> GCP workload identity federation token helper for google-auth executable-sourced credentials"
license = "Apache-2.0"
readme = "README.md"

[[bin]]
name = "aws-gcp-token"
path = "src/main.rs"

[dependencies]
anyhow = "1"
aws-credential-types = "1"
aws-sigv4 = "1"
aws-smithy-runtime-api = "1"
chrono = { version = "0.4", default-features = false, features = [
  "std",
  "clock",
] }
form_urlencoded = "1"
quick-xml = { version = "0.39", features = ["serialize"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = { version = "2", default-features = false, features = ["tls"] }

[package.metadata.deb]
section = "utils"
priority = "optional"
copyright = "Apache-2.0; see /usr/share/doc/aws-gcp-token/LICENSE"
assets = [
  [
    "target/release/aws-gcp-token",
    "usr/bin/",
    "755",
  ],
  [
    "README.md",
    "usr/share/doc/aws-gcp-token/README",
    "644",
  ],
  [
    "LICENSE",
    "usr/share/doc/aws-gcp-token/LICENSE",
    "644",
  ],
]
extended-description = """\
Standalone helper that turns AWS IAM credentials into a signed JWT for GCP \
Workload Identity Federation, in the JSON shape expected by google-auth's \
executable-sourced external account credentials."""

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = "z"
panic = "abort"
